--- a/ServerSetup.ipynb
+++ b/ServerSetup.ipynb
@@ -2,11 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6fe18022",
+   "execution_count": 1,
+   "id": "9105d6ec",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20fe36ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.system('git remote set-url origin https://tmane002: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@bitbucket.org/tmane002/bftsmartt.git')"
+   ]
   }
  ],
  "metadata": {
