--- a/ServerSetup.ipynb
+++ b/ServerSetup.ipynb
@@ -2,25 +2,476 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "9105d6ec",
+   "execution_count": 4,
+   "id": "ea879e39",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import shutil\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from joblib import Parallel, delayed\n",
+    "import time\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6ef3a6a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.system('git remote set-url origin https://tmane002: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@github.com/tmane002/hs.git')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "abab0db0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 0bfec4b] Working\n",
+      " 1 file changed, 16 insertions(+), 2 deletions(-)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/tmane002/hs.git\n",
+      "   5200da6..0bfec4b  main -> main\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.system('git add .; git commit -m \"Working\";git push')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b34c23ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def setup(i):\n",
+    "\n",
+    "    ip = lines[i]\n",
+    "    if ip!='None':\n",
+    "        current = (ip.split('.'))\n",
+    "        command = 'ssh -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem '+'ubuntu@ec2-'+str(current[0])+'-'\\\n",
+    "                      +str(current[1])+'-'+str(current[2])+'-'+str(current[3])+'.us-west-1.compute.amazonaws.com -T \"sudo apt -y update;sudo apt -y install build-essential; sudo apt-get install libssl-dev libuv1-dev cmake make; git clone https://github.com/tmane002/hs.git\"'\n",
+    "\n",
+    "        \n",
+    "        os.system(command)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e29c6984",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ssh -i \"MAKWest.pem\" ubuntu@ec2-54-153-98-199.us-west-1.compute.amazonaws.com\n",
+      "ssh -i \"MAKWest.pem\" ubuntu@ec2-52-53-125-211.us-west-1.compute.amazonaws.com\n",
+      "ssh -i \"MAKWest.pem\" ubuntu@ec2-54-183-217-211.us-west-1.compute.amazonaws.com\n",
+      "ssh -i \"MAKWest.pem\" ubuntu@ec2-54-215-192-249.us-west-1.compute.amazonaws.com\n",
+      "ssh -i \"MAKWest.pem\" ubuntu@ec2-3-101-104-80.us-west-1.compute.amazonaws.com\n",
+      "ssh -i \"MAKWest.pem\" ubuntu@ec2-54-183-238-35.us-west-1.compute.amazonaws.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "os.system(\"aws --region us-west-1 ec2 describe-instances  --query 'Reservations[*].Instances[*].[PrivateIpAddress]' --output text > all_internal_ips\")\n",
+    "\n",
+    "os.system(\"aws --region us-west-1 ec2 describe-instances  --query 'Reservations[*].Instances[*].[PublicIpAddress]' --output text > all_external_ips\")\n",
+    "\n",
+    "\n",
+    "with open('all_external_ips') as f:\n",
+    "    lines = f.read().splitlines()\n",
+    "\n",
+    "\n",
+    "lines = [x for x in lines if x!='None']\n",
+    "lines\n",
+    "\n",
+    "for ip in lines:\n",
+    "    if ip!='None':\n",
+    "        current = (ip.split('.'))\n",
+    "\n",
+    "        print('ssh -i \"MAKWest.pem\" ubuntu@ec2-'+str(current[0])+'-'\\\n",
+    "              +str(current[1])+'-'+str(current[2])+'-'+str(current[3])+'.us-west-1.compute.amazonaws.com')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "279a51d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['54.153.98.199',\n",
+       " '52.53.125.211',\n",
+       " '54.183.217.211',\n",
+       " '54.215.192.249',\n",
+       " '3.101.104.80',\n",
+       " '54.183.238.35']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "68ca6fb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "WARNING: apt does not have a stable CLI interface. Use with caution in scripts.\n",
+      "\n",
+      "\n",
+      "WARNING: apt does not have a stable CLI interface. Use with caution in scripts.\n",
+      "\n",
+      "\n",
+      "WARNING: apt does not have a stable CLI interface. Use with caution in scripts.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hit:1 http://us-west-1.ec2.archive.ubuntu.com/ubuntu jammy InRelease\n",
+      "Get:2 http://us-west-1.ec2.archive.ubuntu.com/ubuntu jammy-updates InRelease [119 kB]\n",
+      "Get:3 http://us-west-1.ec2.archive.ubuntu.com/ubuntu jammy-backports InRelease [107 kB]\n",
+      "Hit:1 http://us-west-1.ec2.archive.ubuntu.com/ubuntu jammy InRelease\n",
+      "Hit:2 http://us-west-1.ec2.archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
+      "Hit:3 http://us-west-1.ec2.archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
+      "Hit:1 http://us-west-1.ec2.archive.ubuntu.com/ubuntu jammy InRelease\n",
+      "Hit:2 http://us-west-1.ec2.archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
+      "Hit:3 http://us-west-1.ec2.archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
+      "Hit:1 http://us-west-1.ec2.archive.ubuntu.com/ubuntu jammy InRelease\n",
+      "Hit:2 http://us-west-1.ec2.archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
+      "Hit:3 http://us-west-1.ec2.archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
+      "Get:4 http://security.ubuntu.com/ubuntu jammy-security InRelease [110 kB]\n",
+      "Hit:1 http://us-west-1.ec2.archive.ubuntu.com/ubuntu jammy InRelease\n",
+      "Hit:2 http://us-west-1.ec2.archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
+      "Hit:3 http://us-west-1.ec2.archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
+      "Hit:1 http://us-west-1.ec2.archive.ubuntu.com/ubuntu jammy InRelease\n",
+      "Hit:2 http://us-west-1.ec2.archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
+      "Hit:3 http://us-west-1.ec2.archive.ubuntu.com/ubuntu jammy-backports InRelease\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "WARNING: apt does not have a stable CLI interface. Use with caution in scripts.\n",
+      "\n",
+      "\n",
+      "WARNING: apt does not have a stable CLI interface. Use with caution in scripts.\n",
+      "\n",
+      "\n",
+      "WARNING: apt does not have a stable CLI interface. Use with caution in scripts.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Get:4 http://security.ubuntu.com/ubuntu jammy-security InRelease [110 kB]\n",
+      "Get:4 http://security.ubuntu.com/ubuntu jammy-security InRelease [110 kB]\n",
+      "Get:4 http://security.ubuntu.com/ubuntu jammy-security InRelease [110 kB]\n",
+      "Get:4 http://security.ubuntu.com/ubuntu jammy-security InRelease [110 kB]\n",
+      "Get:4 http://security.ubuntu.com/ubuntu jammy-security InRelease [110 kB]\n",
+      "Fetched 110 kB in 1s (184 kB/s)\n",
+      "Reading package lists...Fetched 110 kB in 1s (189 kB/s)\n",
+      "Reading package lists...Fetched 110 kB in 1s (183 kB/s)\n",
+      "Reading package lists...Fetched 336 kB in 1s (418 kB/s)\n",
+      "Reading package lists...Fetched 110 kB in 1s (143 kB/s)\n",
+      "Reading package lists...Fetched 110 kB in 1s (128 kB/s)\n",
+      "Reading package lists...\n",
+      "Building dependency tree...\n",
+      "Building dependency tree...\n",
+      "Building dependency tree...\n",
+      "Reading state information...\n",
+      "\n",
+      "\n",
+      "Reading state information...\n",
+      "Building dependency tree...17 packages can be upgraded. Run 'apt list --upgradable' to see them.\n",
+      "\n",
+      "17 packages can be upgraded. Run 'apt list --upgradable' to see them.\n",
+      "Building dependency tree...Reading package lists...\n",
+      "Building dependency tree...Reading package lists...\n",
+      "Building dependency tree...\n",
+      "Reading state information...\n",
+      "\n",
+      "Building dependency tree...\n",
+      "Reading state information...\n",
+      "17 packages can be upgraded. Run 'apt list --upgradable' to see them.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "WARNING: apt does not have a stable CLI interface. Use with caution in scripts.\n",
+      "\n",
+      "\n",
+      "WARNING: apt does not have a stable CLI interface. Use with caution in scripts.\n",
+      "\n",
+      "\n",
+      "WARNING: apt does not have a stable CLI interface. Use with caution in scripts.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Reading state information...\n",
+      "17 packages can be upgraded. Run 'apt list --upgradable' to see them.\n",
+      "Reading package lists...\n",
+      "Reading state information...\n",
+      "\n",
+      "Building dependency tree...\n",
+      "Reading state information...\n",
+      "Reading package lists...\n",
+      "Reading state information...\n",
+      "\n",
+      "Building dependency tree...17 packages can be upgraded. Run 'apt list --upgradable' to see them.\n",
+      "Reading package lists...\n",
+      "17 packages can be upgraded. Run 'apt list --upgradable' to see them.\n",
+      "Building dependency tree...build-essential is already the newest version (12.9ubuntu3).\n",
+      "build-essential is already the newest version (12.9ubuntu3).\n",
+      "Reading package lists..."
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "WARNING: apt does not have a stable CLI interface. Use with caution in scripts.\n",
+      "\n",
+      "\n",
+      "WARNING: apt does not have a stable CLI interface. Use with caution in scripts.\n",
+      "\n",
+      "\n",
+      "WARNING: apt does not have a stable CLI interface. Use with caution in scripts.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Building dependency tree...\n",
+      "Reading state information...\n",
+      "0 upgraded, 0 newly installed, 0 to remove and 17 not upgraded.\n",
+      "0 upgraded, 0 newly installed, 0 to remove and 17 not upgraded.\n",
+      "\n",
+      "Reading state information...\n",
+      "Reading package lists...\n",
+      "Reading package lists...Building dependency tree...\n",
+      "Reading state information...\n",
+      "\n",
+      "Building dependency tree...build-essential is already the newest version (12.9ubuntu3).\n",
+      "\n",
+      "Reading state information...\n",
+      "0 upgraded, 0 newly installed, 0 to remove and 17 not upgraded.\n",
+      "build-essential is already the newest version (12.9ubuntu3).\n",
+      "0 upgraded, 0 newly installed, 0 to remove and 17 not upgraded.\n",
+      "build-essential is already the newest version (12.9ubuntu3).\n",
+      "\n",
+      "Reading state information...\n",
+      "Reading package lists...\n",
+      "Reading state information...\n",
+      "\n",
+      "Building dependency tree...0 upgraded, 0 newly installed, 0 to remove and 17 not upgraded.\n",
+      "build-essential is already the newest version (12.9ubuntu3).\n",
+      "Reading package lists...\n",
+      "Building dependency tree...0 upgraded, 0 newly installed, 0 to remove and 17 not upgraded.\n",
+      "Reading package lists...\n",
+      "Building dependency tree...make is already the newest version (4.3-4.1build1).\n",
+      "make set to manually installed.\n",
+      "The following additional packages will be installed:\n",
+      "  cmake-data dh-elpa-helper emacsen-common libjsoncpp25 librhash0\n",
+      "Suggested packages:\n",
+      "  cmake-doc ninja-build cmake-format libssl-doc\n",
+      "make is already the newest version (4.3-4.1build1).\n",
+      "make set to manually installed.\n",
+      "The following additional packages will be installed:\n",
+      "  cmake-data dh-elpa-helper emacsen-common libjsoncpp25 librhash0\n",
+      "The following NEW packages will be installed:\n",
+      "  cmake cmake-data dh-elpa-helper emacsen-common libjsoncpp25 librhash0\n",
+      "Suggested packages:\n",
+      "  cmake-doc ninja-build cmake-format libssl-doc\n",
+      "  libssl-dev libuv1-dev\n",
+      "0 upgraded, 8 newly installed, 0 to remove and 17 not upgraded.\n",
+      "Need to get 9657 kB of archives.\n",
+      "After this operation, 44.9 MB of additional disk space will be used.\n",
+      "Do you want to continue? [Y/n] Abort.\n",
+      "Reading package lists...The following NEW packages will be installed:\n",
+      "  cmake cmake-data dh-elpa-helper emacsen-common libjsoncpp25 librhash0\n",
+      "  libssl-dev libuv1-dev\n",
+      "\n",
+      "0 upgraded, 8 newly installed, 0 to remove and 17 not upgraded.\n",
+      "Need to get 9657 kB of archives.\n",
+      "After this operation, 44.9 MB of additional disk space will be used.\n",
+      "Do you want to continue? [Y/n] Abort.\n",
+      "Building dependency tree...\n",
+      "Reading state information...\n",
+      "\n",
+      "Reading state information...\n",
+      "\n",
+      "Reading state information...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'hs'...\n",
+      "Cloning into 'hs'...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "make is already the newest version (4.3-4.1build1).\n",
+      "make set to manually installed.\n",
+      "The following additional packages will be installed:\n",
+      "  cmake-data dh-elpa-helper emacsen-common libjsoncpp25 librhash0\n",
+      "Suggested packages:\n",
+      "  cmake-doc ninja-build cmake-format libssl-doc\n",
+      "\n",
+      "Reading state information...\n",
+      "The following NEW packages will be installed:\n",
+      "  cmake cmake-data dh-elpa-helper emacsen-common libjsoncpp25 librhash0\n",
+      "  libssl-dev libuv1-dev\n",
+      "0 upgraded, 8 newly installed, 0 to remove and 17 not upgraded.\n",
+      "Need to get 9657 kB of archives.\n",
+      "After this operation, 44.9 MB of additional disk space will be used.\n",
+      "Do you want to continue? [Y/n] Abort.\n",
+      "make is already the newest version (4.3-4.1build1).\n",
+      "make set to manually installed.\n",
+      "The following additional packages will be installed:\n",
+      "  cmake-data dh-elpa-helper emacsen-common libjsoncpp25 librhash0\n",
+      "Suggested packages:\n",
+      "  cmake-doc ninja-build cmake-format libssl-doc\n",
+      "The following NEW packages will be installed:\n",
+      "  cmake cmake-data dh-elpa-helper emacsen-common libjsoncpp25 librhash0\n",
+      "  libssl-dev libuv1-dev\n",
+      "0 upgraded, 8 newly installed, 0 to remove and 17 not upgraded.\n",
+      "Need to get 9657 kB of archives.\n",
+      "After this operation, 44.9 MB of additional disk space will be used.\n",
+      "Do you want to continue? [Y/n] Abort.\n",
+      "make is already the newest version (4.3-4.1build1).\n",
+      "make set to manually installed.\n",
+      "The following additional packages will be installed:\n",
+      "  cmake-data dh-elpa-helper emacsen-common libjsoncpp25 librhash0\n",
+      "Suggested packages:\n",
+      "  cmake-doc ninja-build cmake-format libssl-doc\n",
+      "The following NEW packages will be installed:\n",
+      "  cmake cmake-data dh-elpa-helper emacsen-common libjsoncpp25 librhash0\n",
+      "  libssl-dev libuv1-dev\n",
+      "0 upgraded, 8 newly installed, 0 to remove and 17 not upgraded.\n",
+      "Need to get 9657 kB of archives.\n",
+      "After this operation, 44.9 MB of additional disk space will be used.\n",
+      "Do you want to continue? [Y/n] Abort.\n",
+      "make is already the newest version (4.3-4.1build1).\n",
+      "make set to manually installed.\n",
+      "The following additional packages will be installed:\n",
+      "  cmake-data dh-elpa-helper emacsen-common libjsoncpp25 librhash0\n",
+      "Suggested packages:\n",
+      "  cmake-doc ninja-build cmake-format libssl-doc\n",
+      "The following NEW packages will be installed:\n",
+      "  cmake cmake-data dh-elpa-helper emacsen-common libjsoncpp25 librhash0\n",
+      "  libssl-dev libuv1-dev\n",
+      "0 upgraded, 8 newly installed, 0 to remove and 17 not upgraded.\n",
+      "Need to get 9657 kB of archives.\n",
+      "After this operation, 44.9 MB of additional disk space will be used.\n",
+      "Do you want to continue? [Y/n] Abort.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'hs'...\n",
+      "Cloning into 'hs'...\n",
+      "Cloning into 'hs'...\n",
+      "Cloning into 'hs'...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[None, None, None, None, None, None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = Parallel(n_jobs=len(lines))(delayed(setup)(i) for i in range(len(lines)))\n",
+    "print(results)  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20fe36ec",
+   "id": "c152f1ab",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "os.system('git remote set-url origin https://tmane002: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@bitbucket.org/tmane002/bftsmartt.git')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
