--- a/ServerSetup.ipynb
+++ b/ServerSetup.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ea879e39",
+   "id": "d54d0d33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "6ef3a6a3",
+   "execution_count": 13,
+   "id": "c2036ca7",
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
        "0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,33 +37,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "abab0db0",
+   "execution_count": 14,
+   "id": "f932f942",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 0bfec4b] Working\n",
-      " 1 file changed, 16 insertions(+), 2 deletions(-)\n"
+      "On branch main\n",
+      "Your branch is ahead of 'origin/main' by 1 commit.\n",
+      "  (use \"git push\" to publish your local commits)\n",
+      "\n",
+      "nothing to commit, working tree clean\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "To https://github.com/tmane002/hs.git\n",
-      "   5200da6..0bfec4b  main -> main\n"
+      "remote: Invalid username or password.\n",
+      "fatal: Authentication failed for 'https://github.com/tmane002/hs.git/'\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0"
+       "32768"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b34c23ff",
+   "id": "08394e52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e29c6984",
+   "id": "39e3738f",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "279a51d0",
+   "id": "e2653aca",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "68ca6fb7",
+   "id": "08d63e15",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c152f1ab",
+   "id": "5207b1eb",
    "metadata": {},
    "outputs": [],
    "source": []
