--- a/ServerSetup.ipynb
+++ b/ServerSetup.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "57f81a96",
+   "execution_count": 1,
+   "id": "85b46164",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,20 +16,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6abcf557",
+   "execution_count": 2,
+   "id": "dec29386",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "os.system('git remote set-url origin https://tmane002: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@github.com/tmane002/hs.git')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "288b113c",
+   "execution_count": 5,
+   "id": "32acdefe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is ahead of 'origin/main' by 8 commits.\n",
+      "  (use \"git push\" to publish your local commits)\n",
+      "\n",
+      "nothing to commit, working tree clean\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "remote: Support for password authentication was removed on August 13, 2021.\n",
+      "remote: Please see https://docs.github.com/en/get-started/getting-started-with-git/about-remote-repositories#cloning-with-https-urls for information on currently recommended modes of authentication.\n",
+      "fatal: Authentication failed for 'https://github.com/tmane002/hs.git/'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "32768"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "os.system('git add .; git commit -m \"Working\";git push')"
    ]
@@ -37,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b03f1035",
+   "id": "a968fe03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "700f8f46",
+   "id": "aee5f543",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8d17855",
+   "id": "9d45be31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0dbecc5",
+   "id": "7a9d0183",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -101,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d42bf7d",
+   "id": "3a343cac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c7455d1",
+   "id": "1b628a80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "558ccc32",
+   "id": "de2d8113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4adfbda",
+   "id": "96182904",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad4f65dd",
+   "id": "7d0afdf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d48a96e5",
+   "id": "cc3815b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fff3f6ad",
+   "id": "8b6dd35f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13dd7898",
+   "id": "188789ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da91dc21",
+   "id": "fb91d458",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c14efd2a",
+   "id": "549b0bb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a1ae79d",
+   "id": "5db41bc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10de43ba",
+   "id": "b50af13d",
    "metadata": {},
    "outputs": [],
    "source": []
