--- a/ServerSetup.ipynb
+++ b/ServerSetup.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "0e8b6036",
+   "execution_count": null,
+   "id": "42f087e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,62 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "c654abeb",
+   "execution_count": null,
+   "id": "611e82f3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "os.system('git remote set-url origin https://tmane002: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@github.com/tmane002/hs.git')"
+    "os.system('git remote set-url origin https://tmane002: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@github.com/tmane002/hs.git')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "905e6f1e",
+   "execution_count": null,
+   "id": "5fe849b9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "On branch main\n",
-      "Your branch is ahead of 'origin/main' by 9 commits.\n",
-      "  (use \"git push\" to publish your local commits)\n",
-      "\n",
-      "nothing to commit, working tree clean\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "remote: Support for password authentication was removed on August 13, 2021.\n",
-      "remote: Please see https://docs.github.com/en/get-started/getting-started-with-git/about-remote-repositories#cloning-with-https-urls for information on currently recommended modes of authentication.\n",
-      "fatal: Authentication failed for 'https://github.com/tmane002/hs.git/'\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "32768"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "os.system('git add .; git commit -m \"Working\";git push')"
    ]
@@ -79,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2114d169",
+   "id": "08f801b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +47,7 @@
     "    if ip!='None':\n",
     "        current = (ip.split('.'))\n",
     "        command = 'ssh -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem '+'ubuntu@ec2-'+str(current[0])+'-'\\\n",
-    "                      +str(current[1])+'-'+str(current[2])+'-'+str(current[3])+'.us-west-1.compute.amazonaws.com -T \"sudo apt -y update;sudo apt -y install build-essential; sudo apt -y install autoconf libtool libssl-dev libuv1-dev cmake pkg-config cmake-data make; sudo rm -r hs; git clone https://github.com/tmane002/hs.git;\"'\n",
+    "                      +str(current[1])+'-'+str(current[2])+'-'+str(current[3])+'.us-west-1.compute.amazonaws.com -T \"sudo apt -y update;sudo apt -y install build-essential; sudo apt -y install autoconf libtool libssl-dev libuv1-dev cmake pkg-config cmake-data make; sudo rm -r hs; sudo git clone https://github.com/tmane002/hs.git;\"'\n",
     "\n",
     "        \n",
     "        os.system(command)"
@@ -98,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5cea6fa",
+   "id": "cb7c68c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "526e7ed1",
+   "id": "4a1e833f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58f1b7b1",
+   "id": "faddb816",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -143,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ecc7030",
+   "id": "c0b590c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46674e80",
+   "id": "0b3803ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +122,7 @@
     "    if ip!='None':\n",
     "        current = (ip.split('.'))\n",
     "        command = 'ssh -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem '+'ubuntu@ec2-'+str(current[0])+'-'\\\n",
-    "                      +str(current[1])+'-'+str(current[2])+'-'+str(current[3])+'.us-west-1.compute.amazonaws.com -T \"cd hs; sudo cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED=ON -DHOTSTUFF_PROTO_LOG=ON; sudo make;\"'\n",
+    "                      +str(current[1])+'-'+str(current[2])+'-'+str(current[3])+'.us-west-1.compute.amazonaws.com -T \"cd hs; sudo cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED=ON -DHOTSTUFF_PROTO_LOG=ON; sudo make -j2;\"'\n",
     "\n",
     "        \n",
     "        \n",
@@ -174,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a36f1623",
+   "id": "f30365cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7b816bc",
+   "id": "0271d538",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0abdcc25",
+   "id": "17cb39dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91371994",
+   "id": "622b39dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c7a893c",
+   "id": "ac9b8c23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,9 +185,9 @@
     "        \n",
     "        current = (ip.split('.'))\n",
     "        command = 'ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem '+'ubuntu@ec2-'+str(current[0])+'-'\\\n",
-    "              +str(current[1])+'-'+str(current[2])+'-'+str(current[3])+'.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec '+str(i)+'.conf >../nohup.out 2>&1 &\"'\n",
+    "              +str(current[1])+'-'+str(current[2])+'-'+str(current[3])+'.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec'+str(i)+'.conf >../nohup.out 2>&1 &\"'\n",
     "        \n",
-    "        \n",
+    "        print(command)\n",
     "        os.system(command)\n",
     "        "
    ]
@@ -237,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "802b7fdd",
+   "id": "a504e60c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b79887f",
+   "id": "a26c55e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,9 +217,9 @@
     "    if ip!='None':\n",
     "        current = (ip.split('.'))\n",
     "        command = 'ssh -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem '+'ubuntu@ec2-'+str(current[0])+'-'\\\n",
-    "              +str(current[1])+'-'+str(current[2])+'-'+str(current[3])+'.us-west-1.compute.amazonaws.com -T \"cd hs; sudo killall hotstuff-app; sudo killall hotstuff-client; sudo killall nohup;\"'\n",
+    "              +str(current[1])+'-'+str(current[2])+'-'+str(current[3])+'.us-west-1.compute.amazonaws.com -T \"cd hs; sudo killall hotstuff-app; sudo killall hotstuff-client;\"'\n",
     "        \n",
-    "        \n",
+    "        print(command)\n",
     "        os.system(command)\n",
     "\n",
     "        \n",
@@ -284,18 +242,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4e13ac1",
+   "id": "615a84a2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = Parallel(n_jobs=len(lines))(delayed(run_server_node)(i) for i in range(len(lines)))\n",
+    "results = Parallel(n_jobs=len(lines))(delayed(kill_nodes)(i) for i in range(len(lines)))\n",
     "print(results)  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd70f3dc",
+   "id": "841bb4ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b2026d8",
+   "id": "60aa75fc",
    "metadata": {},
    "outputs": [],
    "source": []
