--- a/ServerSetup.ipynb
+++ b/ServerSetup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "42f087e8",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
+   "id": "a62c45fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../../../gitkey.txt', 'r') as file:\n",
+    "    gitkey = file.read().replace('\\n', '')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "611e82f3",
    "metadata": {},
    "outputs": [
@@ -26,18 +37,18 @@
        "0"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "os.system('git remote set-url origin https://tmane002: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@github.com/tmane002/hs.git')"
+    "os.system('git remote set-url origin https://tmane002:'+gitkey+'@github.com/tmane002/hs.git')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "5fe849b9",
    "metadata": {},
    "outputs": [
@@ -45,9 +56,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 6b29144] Working\n",
-      " 5 files changed, 306183 insertions(+), 53470 deletions(-)\n",
-      " create mode 100644 nohup.out\n"
+      "[main 997a2c8] Working\n",
+      " 2 files changed, 2253 insertions(+), 28063 deletions(-)\n",
+      " rewrite ServerSetup.ipynb (77%)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "remote: Support for password authentication was removed on August 13, 2021.\n",
+      "remote: Please see https://docs.github.com/en/get-started/getting-started-with-git/about-remote-repositories#cloning-with-https-urls for information on currently recommended modes of authentication.\n",
+      "fatal: Authentication failed for 'https://github.com/tmane002/hs.git/'\n"
      ]
     },
     {
@@ -56,7 +76,7 @@
        "32768"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
