--- a/ServerSetup.ipynb
+++ b/ServerSetup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "42f087e8",
    "metadata": {},
    "outputs": [],
@@ -16,8 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a62c45fd",
+   "execution_count": 7,
+   "id": "22d8d5bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "611e82f3",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
        "0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "5fe849b9",
    "metadata": {},
    "outputs": [
@@ -56,27 +56,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 997a2c8] Working\n",
-      " 2 files changed, 2253 insertions(+), 28063 deletions(-)\n",
-      " rewrite ServerSetup.ipynb (77%)\n"
+      "[main 4f2bb95] Working\n",
+      " 2 files changed, 2130 insertions(+), 5986 deletions(-)\n",
+      " rewrite .ipynb_checkpoints/ServerSetup-checkpoint.ipynb (77%)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "remote: Support for password authentication was removed on August 13, 2021.\n",
-      "remote: Please see https://docs.github.com/en/get-started/getting-started-with-git/about-remote-repositories#cloning-with-https-urls for information on currently recommended modes of authentication.\n",
-      "fatal: Authentication failed for 'https://github.com/tmane002/hs.git/'\n"
+      "To https://github.com/tmane002/hs.git\n",
+      "   f7efb8f..4f2bb95  main -> main\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "32768"
+       "0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "id": "08f801b7",
    "metadata": {},
    "outputs": [],
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "id": "cb7c68c7",
    "metadata": {},
    "outputs": [
@@ -146,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "id": "4a1e833f",
    "metadata": {},
    "outputs": [
@@ -161,7 +160,7 @@
        " '54.183.238.35']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "0b3803ec",
    "metadata": {},
    "outputs": [],
@@ -1830,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "0271d538",
    "metadata": {},
    "outputs": [],
@@ -1841,7 +1840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "17cb39dc",
    "metadata": {},
    "outputs": [],
@@ -1852,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "622b39dd",
    "metadata": {},
    "outputs": [
@@ -1866,7 +1865,7 @@
        " '3.101.104.80']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1877,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "ac9b8c23",
    "metadata": {},
    "outputs": [],
@@ -1923,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "id": "a504e60c",
    "metadata": {},
    "outputs": [
@@ -1938,6 +1937,9 @@
     }
    ],
    "source": [
+    "results = Parallel(n_jobs=len(lines))(delayed(clean_nodes)(i) for i in range(len(lines)))\n",
+    "\n",
+    "\n",
     "results = Parallel(n_jobs=len(lines))(delayed(run_server_node)(i) for i in range(len(lines)))\n",
     "print(results)  \n",
     "\n",
@@ -1947,7 +1949,7 @@
     "print(results)  \n",
     "\n",
     "\n",
-    "time.sleep(20)\n",
+    "time.sleep(40)\n",
     "\n",
     "\n",
     "results = Parallel(n_jobs=len(lines))(delayed(run_join_node)(i) for i in range(len(lines)))\n",
@@ -1958,15 +1960,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "df6faf96",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "id": "a26c55e6",
    "metadata": {},
    "outputs": [],
@@ -2002,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 28,
    "id": "615a84a2",
    "metadata": {},
    "outputs": [
@@ -2010,18 +2025,84 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ssh -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-153-98-199.us-west-1.compute.amazonaws.com -T \"cd hs; sudo killall hotstuff-app; sudo killall hotstuff-client;\"\n",
-      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-183-217-211.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec2.conf >../nohup.out 2>&1 &\"\n",
-      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-183-238-35.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-client --idx 0 --iter -1 --max-async 4 >../nohup.out 2>&1 &\"\n",
-      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-153-98-199.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec0.conf >../nohup.out 2>&1 &\"\n",
-      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-52-53-125-211.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec1.conf >../nohup.out 2>&1 &\"\n",
-      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-215-192-249.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec3.conf >../nohup.out 2>&1 &\"\n",
-      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-3-101-104-80.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec4.conf >../nohup.out 2>&1 &\"\n",
-      "ssh -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-52-53-125-211.us-west-1.compute.amazonaws.com -T \"cd hs; sudo killall hotstuff-app; sudo killall hotstuff-client;\"\n",
-      "ssh -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-183-217-211.us-west-1.compute.amazonaws.com -T \"cd hs; sudo killall hotstuff-app; sudo killall hotstuff-client;\"\n",
-      "ssh -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-215-192-249.us-west-1.compute.amazonaws.com -T \"cd hs; sudo killall hotstuff-app; sudo killall hotstuff-client;\"\n",
-      "ssh -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-3-101-104-80.us-west-1.compute.amazonaws.com -T \"cd hs; sudo killall hotstuff-app; sudo killall hotstuff-client;\"\n",
+      "ssh -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-153-98-199.us-west-1.compute.amazonaws.com -T \"cd hs; sudo killall hotstuff-app; sudo killall hotstuff-client;\"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "hotstuff-client: no process found\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ssh -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-52-53-125-211.us-west-1.compute.amazonaws.com -T \"cd hs; sudo killall hotstuff-app; sudo killall hotstuff-client;\"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "hotstuff-client: no process found\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ssh -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-183-217-211.us-west-1.compute.amazonaws.com -T \"cd hs; sudo killall hotstuff-app; sudo killall hotstuff-client;\"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "hotstuff-client: no process found\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ssh -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-215-192-249.us-west-1.compute.amazonaws.com -T \"cd hs; sudo killall hotstuff-app; sudo killall hotstuff-client;\"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "hotstuff-client: no process found\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ssh -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-3-101-104-80.us-west-1.compute.amazonaws.com -T \"cd hs; sudo killall hotstuff-app; sudo killall hotstuff-client;\"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "hotstuff-client: no process found\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "ssh -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-183-238-35.us-west-1.compute.amazonaws.com -T \"cd hs; sudo killall hotstuff-app; sudo killall hotstuff-client;\"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "hotstuff-app: no process found\n"
      ]
     }
    ],
@@ -2033,7 +2114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "id": "60aa75fc",
    "metadata": {},
    "outputs": [],
@@ -2051,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "36e27209",
    "metadata": {},
    "outputs": [
