--- a/ServerSetup.ipynb
+++ b/ServerSetup.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 64,
    "id": "5fe849b9",
    "metadata": {},
    "outputs": [
@@ -56,8 +56,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main dcce202] Working\n",
-      " 4 files changed, 281811 insertions(+), 297758 deletions(-)\n"
+      "[main 98ab22c] Working\n",
+      " 4 files changed, 277639 insertions(+), 280779 deletions(-)\n"
      ]
     },
     {
@@ -66,9 +66,21 @@
        "0"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-183-217-211.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec2.conf >../nohup.out 2>&1 &\"\n",
+      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-52-53-125-211.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec1.conf >../nohup.out 2>&1 &\"\n",
+      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-153-98-199.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec0.conf >../nohup.out 2>&1 &\"\n",
+      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-215-192-249.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec3.conf >../nohup.out 2>&1 &\"\n",
+      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-183-238-35.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-client --idx 0 --iter -1 --max-async 4 >../nohup.out 2>&1 &\"\n",
+      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-3-101-104-80.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec4.conf >../nohup.out 2>&1 &\"\n"
+     ]
     }
    ],
    "source": [
@@ -175,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17e9a1f9",
+   "id": "e21c8deb",
    "metadata": {},
    "source": [
     "## First time Setup"
@@ -641,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2417d76b",
+   "id": "dd8347d7",
    "metadata": {},
    "source": [
     "## Git pull"
@@ -650,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "c9b20558",
+   "id": "d022cade",
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "48aa7eed",
+   "id": "3b6ba838",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2294,7 +2306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29d83dbf",
+   "id": "0934c9a9",
    "metadata": {},
    "outputs": [],
    "source": []
