--- a/ServerSetup.ipynb
+++ b/ServerSetup.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 76,
    "id": "5fe849b9",
    "metadata": {},
    "outputs": [
@@ -56,8 +56,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 9ffc6a9] Working\n",
-      " 3 files changed, 24 insertions(+), 12 deletions(-)\n"
+      "[main 78ec9cd] Working\n",
+      " 4 files changed, 338897 insertions(+), 277610 deletions(-)\n"
      ]
     },
     {
@@ -66,7 +66,7 @@
        "0"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb857211",
+   "id": "78140f51",
    "metadata": {},
    "source": [
     "## First time Setup"
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f448ced",
+   "id": "3d95f537",
    "metadata": {},
    "source": [
     "## Git pull"
@@ -649,8 +649,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "e534ff58",
+   "execution_count": 77,
+   "id": "27533e53",
    "metadata": {},
    "outputs": [
     {
@@ -658,59 +658,63 @@
      "output_type": "stream",
      "text": [
       "From https://github.com/tmane002/hs\n",
-      "   dcce202..9ffc6a9  main       -> origin/main\n",
-      "Updating dcce202..9ffc6a9\n",
+      "   9ffc6a9..78ec9cd  main       -> origin/main\n",
+      "Updating 9ffc6a9..78ec9cd\n",
       "Fast-forward\n",
-      " IO.ipynb          | 108738 ++++++-------\n",
-      " ServerSetup.ipynb |    409 +-\n",
-      " nohup.out         | 449281 ++++++++++++++++++++++++++-------------------------\n",
+      " IO.ipynb          | 110095 +++++------\n",
+      " ServerSetup.ipynb |    355 +-\n",
+      " nohup.out         | 506053 ++++++++++++++++++++++++++++-----------------------\n",
       " src/hotstuff.cpp  |      4 +-\n",
-      " 4 files changed, 277652 insertions(+), 280780 deletions(-)\n",
+      " 4 files changed, 338897 insertions(+), 277610 deletions(-)\n",
       "From https://github.com/tmane002/hs\n",
-      "   dcce202..9ffc6a9  main       -> origin/main\n",
-      "Updating dcce202..9ffc6a9\n",
+      "   9ffc6a9..78ec9cd  main       -> origin/main\n",
+      "Updating 9ffc6a9..78ec9cd\n",
       "Fast-forward\n",
-      " IO.ipynb          | 108738 ++++++-------\n",
-      " ServerSetup.ipynb |    409 +-\n",
-      " nohup.out         | 449281 ++++++++++++++++++++++++++-------------------------\n",
+      " IO.ipynb          | 110095 +++++------\n",
+      " ServerSetup.ipynb |    355 +-\n",
+      " nohup.out         | 506053 ++++++++++++++++++++++++++++-----------------------\n",
       " src/hotstuff.cpp  |      4 +-\n",
-      " 4 files changed, 277652 insertions(+), 280780 deletions(-)\n",
+      " 4 files changed, 338897 insertions(+), 277610 deletions(-)\n",
       "From https://github.com/tmane002/hs\n",
-      "   dcce202..9ffc6a9  main       -> origin/main\n",
-      "Updating dcce202..9ffc6a9\n",
+      "   9ffc6a9..78ec9cd  main       -> origin/main\n",
+      "Updating 9ffc6a9..78ec9cd\n",
       "Fast-forward\n",
-      " IO.ipynb          | 108738 ++++++-------\n",
-      " ServerSetup.ipynb |    409 +-\n",
-      " nohup.out         | 449281 ++++++++++++++++++++++++++-------------------------\n",
+      " IO.ipynb          | 110095 +++++------\n",
+      " ServerSetup.ipynb |    355 +-\n",
+      " nohup.out         | 506053 ++++++++++++++++++++++++++++-----------------------\n",
       " src/hotstuff.cpp  |      4 +-\n",
-      " 4 files changed, 277652 insertions(+), 280780 deletions(-)\n",
+      " 4 files changed, 338897 insertions(+), 277610 deletions(-)\n",
       "From https://github.com/tmane002/hs\n",
-      "   dcce202..9ffc6a9  main       -> origin/main\n",
-      "Updating dcce202..9ffc6a9\n",
+      "   9ffc6a9..78ec9cd  main       -> origin/main\n",
+      "Updating 9ffc6a9..78ec9cd\n",
       "Fast-forward\n",
-      " IO.ipynb          | 108738 ++++++-------\n",
-      " ServerSetup.ipynb |    409 +-\n",
-      " nohup.out         | 449281 ++++++++++++++++++++++++++-------------------------\n",
+      " IO.ipynb          | 110095 +++++------\n",
+      " ServerSetup.ipynb |    355 +-\n",
+      " nohup.out         | 506053 ++++++++++++++++++++++++++++-----------------------\n",
       " src/hotstuff.cpp  |      4 +-\n",
-      " 4 files changed, 277652 insertions(+), 280780 deletions(-)\n",
+      " 4 files changed, 338897 insertions(+), 277610 deletions(-)\n",
       "From https://github.com/tmane002/hs\n",
-      "   dcce202..9ffc6a9  main       -> origin/main\n",
-      "Updating dcce202..9ffc6a9\n",
+      "   9ffc6a9..78ec9cd  main       -> origin/main\n",
+      "Updating 9ffc6a9..78ec9cd\n",
       "Fast-forward\n",
-      " IO.ipynb          | 108738 ++++++-------\n",
-      " ServerSetup.ipynb |    409 +-\n",
-      " nohup.out         | 449281 ++++++++++++++++++++++++++-------------------------\n",
+      " IO.ipynb          | 110095 +++++------\n",
+      " ServerSetup.ipynb |    355 +-\n",
+      " nohup.out         | 506053 ++++++++++++++++++++++++++++-----------------------\n",
       " src/hotstuff.cpp  |      4 +-\n",
-      " 4 files changed, 277652 insertions(+), 280780 deletions(-)\n",
+      " 4 files changed, 338897 insertions(+), 277610 deletions(-)\n",
+      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-52-53-125-211.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec1.conf >../nohup.out 2>&1 &\"\n",
+      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-215-192-249.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec3.conf >../nohup.out 2>&1 &\"\n",
+      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-153-98-199.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec0.conf >../nohup.out 2>&1 &\"\n",
+      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-183-238-35.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-client --idx 0 --iter -1 --max-async 4 >../nohup.out 2>&1 &\"\n",
       "From https://github.com/tmane002/hs\n",
-      "   dcce202..9ffc6a9  main       -> origin/main\n",
-      "Updating dcce202..9ffc6a9\n",
+      "   9ffc6a9..78ec9cd  main       -> origin/main\n",
+      "Updating 9ffc6a9..78ec9cd\n",
       "Fast-forward\n",
-      " IO.ipynb          | 108738 ++++++-------\n",
-      " ServerSetup.ipynb |    409 +-\n",
-      " nohup.out         | 449281 ++++++++++++++++++++++++++-------------------------\n",
+      " IO.ipynb          | 110095 +++++------\n",
+      " ServerSetup.ipynb |    355 +-\n",
+      " nohup.out         | 506053 ++++++++++++++++++++++++++++-----------------------\n",
       " src/hotstuff.cpp  |      4 +-\n",
-      " 4 files changed, 277652 insertions(+), 280780 deletions(-)\n"
+      " 4 files changed, 338897 insertions(+), 277610 deletions(-)\n"
      ]
     }
    ],
@@ -722,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "38fa38f0",
+   "id": "092d8b9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 78,
    "id": "f30365cb",
    "metadata": {
     "scrolled": true
@@ -765,6 +769,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-183-217-211.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec2.conf >../nohup.out 2>&1 &\"\n",
+      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-3-101-104-80.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec4.conf >../nohup.out 2>&1 &\"\n",
       "CMake Warning:\n",
       "  No source or binary directory provided.  Both will be assumed to be the\n",
       "  same as the current working directory, but note that this warning will\n",
@@ -2053,8 +2059,8 @@
       "  560 |     void notify() { write(fd, &dummy, 8); }\n",
       "      |                     ~~~~~^~~~~~~~~~~~~~~\n",
       "[ 67%] Built target hotstuff\n",
-      "[ 70%] Linking CXX static library libhotstuff.a\n",
-      "[ 72%] Linking CXX shared library libhotstuff.so\n",
+      "[ 70%] Linking CXX shared library libhotstuff.so\n",
+      "[ 72%] Linking CXX static library libhotstuff.a\n",
       "[ 72%] Built target hotstuff_static\n",
       "Consolidate compiler generated dependencies of target hotstuff-keygen\n",
       "[ 75%] Linking CXX executable hotstuff-keygen\n",
@@ -2178,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 79,
    "id": "a504e60c",
    "metadata": {},
    "outputs": [
@@ -2216,7 +2222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "id": "df6faf96",
    "metadata": {},
    "outputs": [
@@ -2226,7 +2232,7 @@
        "3"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2237,7 +2243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "id": "a26c55e6",
    "metadata": {},
    "outputs": [],
@@ -2273,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 82,
    "id": "615a84a2",
    "metadata": {},
    "outputs": [
@@ -2298,7 +2304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 83,
    "id": "60aa75fc",
    "metadata": {},
    "outputs": [],
@@ -2316,7 +2322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 84,
    "id": "36e27209",
    "metadata": {},
    "outputs": [],
@@ -2327,7 +2333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 85,
    "id": "e99172dc",
    "metadata": {},
    "outputs": [
@@ -2337,9 +2343,21 @@
        "312"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-215-192-249.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec3.conf >../nohup.out 2>&1 &\"\n",
+      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-52-53-125-211.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec1.conf >../nohup.out 2>&1 &\"\n",
+      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-153-98-199.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec0.conf >../nohup.out 2>&1 &\"\n",
+      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-183-238-35.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-client --idx 0 --iter -1 --max-async 4 >../nohup.out 2>&1 &\"\n",
+      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-54-183-217-211.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec2.conf >../nohup.out 2>&1 &\"\n",
+      "ssh  -o StrictHostKeyChecking=no -i /home/tejas/Downloads/MAKWest.pem ubuntu@ec2-3-101-104-80.us-west-1.compute.amazonaws.com -T \"cd hs; sudo nohup ./examples/hotstuff-app --conf hotstuff.gen-sec4.conf >../nohup.out 2>&1 &\"\n"
+     ]
     }
    ],
    "source": [
@@ -2349,7 +2367,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bad1a72e",
+   "id": "2a08fdc0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9e89273",
    "metadata": {},
    "outputs": [],
    "source": []
