--- a/ServerSetup.ipynb
+++ b/ServerSetup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 86,
    "id": "42f087e8",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 87,
    "id": "c88a5df5",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 88,
    "id": "611e82f3",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
        "0"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "5fe849b9",
    "metadata": {},
    "outputs": [
@@ -56,19 +56,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 78ec9cd] Working\n",
-      " 4 files changed, 338897 insertions(+), 277610 deletions(-)\n"
+      "[main 1144bae] Working\n",
+      " 15 files changed, 334339 insertions(+), 338714 deletions(-)\n",
+      " rewrite hotstuff.gen-sec0.conf (91%)\n",
+      " rewrite hotstuff.gen-sec1.conf (91%)\n",
+      " create mode 100644 hotstuff.gen-sec10.conf\n",
+      " rewrite hotstuff.gen-sec2.conf (91%)\n",
+      " rewrite hotstuff.gen-sec3.conf (91%)\n",
+      " rewrite hotstuff.gen-sec4.conf (91%)\n",
+      " create mode 100644 hotstuff.gen-sec5.conf\n",
+      " create mode 100644 hotstuff.gen-sec6.conf\n",
+      " create mode 100644 hotstuff.gen-sec7.conf\n",
+      " create mode 100644 hotstuff.gen-sec8.conf\n",
+      " create mode 100644 hotstuff.gen-sec9.conf\n",
+      " rewrite hotstuff.gen.conf (90%)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "08f801b7",
    "metadata": {},
    "outputs": [],
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78140f51",
+   "id": "ef06fd50",
    "metadata": {},
    "source": [
     "## First time Setup"
@@ -641,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d95f537",
+   "id": "28301483",
    "metadata": {},
    "source": [
     "## Git pull"
@@ -650,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "27533e53",
+   "id": "794640f5",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "092d8b9f",
+   "id": "70f8fc52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2367,7 +2369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a08fdc0",
+   "id": "f42448d8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2375,7 +2377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9e89273",
+   "id": "c1ebc9ff",
    "metadata": {},
    "outputs": [],
    "source": []
